--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+starwork:
+    resource: "@StarworkBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
