--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.root_dir%/config/routing.yml'
@@ -39,7 +39,7 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     form_themes:
-      - 'views/materialize_layout.html.twig'
+        - materialize_layout.html.twig
 
 
 # Doctrine Configuration
@@ -71,3 +71,14 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Star\workBundle\Entity\User
+    from_email:
+        address: "starWorks@contact.com"
+        sender_name: "starWorker_Group"
+    registration:
+        form:
+            type: Star\workBundle\Form\RegistrationFormType
